// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`my test suite works 1`] = `
<canvas
  data-snapshot-image="51e09c5637c8c4cf463ce0da78329bcca119eaf37701ec874b57b2ccdd8cc0013668e10e3f589f7929dac5544741a7dd1f83023f0493eca77ae80d3c6436c4a5"
  height="200"
/>
`;

exports[`my test suite works for canvas wrapped by other elements 1`] = `
<div>
  <canvas
  data-snapshot-image="51e09c5637c8c4cf463ce0da78329bcca119eaf37701ec874b57b2ccdd8cc0013668e10e3f589f7929dac5544741a7dd1f83023f0493eca77ae80d3c6436c4a5"
  height="200"
/>
</div>
`;
